query nodes and update links
