# geonode/docs/v1/query.swagger.json
@@ -11,15 +11,111 @@
     "application/json"
   ],
   "paths": {
-    "/chora/geonode/v1/node-by-curator/{curator}": {
+    "/chora/geonode/v1/node/{id}": {
       "get": {
-        "summary": "NodeByCurator queries nodes by the curator of the nodes.",
-        "operationId": "NodeByCurator",
+        "summary": "Node queries a node by the unique identifier of the node.",
+        "operationId": "Node",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/chora.geonode.v1.QueryNodeByCuratorResponse"
+              "$ref": "#/definitions/chora.geonode.v1.QueryNodeResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id is the unique identifier of the node.",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "uint64"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/chora/geonode/v1/nodes": {
+      "get": {
+        "summary": "Nodes queries all nodes.",
+        "operationId": "Nodes",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chora.geonode.v1.QueryNodesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "pagination.key",
+            "description": "key is a value returned in PageResponse.next_key to begin\nquerying the next page most efficiently. Only one of offset or key\nshould be set.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "byte"
+          },
+          {
+            "name": "pagination.offset",
+            "description": "offset is a numeric offset that can be used when key is unavailable.\nIt is less efficient than using key. Only one of offset or key should\nbe set.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.limit",
+            "description": "limit is the total number of results to be returned in the result page.\nIf left empty it will default to a value to be set by each app.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "pagination.count_total",
+            "description": "count_total is set to true  to indicate that the result set should include\na count of the total number of items available for pagination in UIs.\ncount_total is only respected when offset is used. It is ignored when key\nis set.",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "pagination.reverse",
+            "description": "reverse is set to true if results are to be returned in the descending order.\n\nSince: cosmos-sdk 0.43",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          }
+        ],
+        "tags": [
+          "Query"
+        ]
+      }
+    },
+    "/chora/geonode/v1/nodes-by-curator/{curator}": {
+      "get": {
+        "summary": "NodesByCurator queries nodes by curator.",
+        "operationId": "NodesByCurator",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chora.geonode.v1.QueryNodesByCuratorResponse"
             }
           },
           "default": {
@@ -80,78 +176,9 @@
           "Query"
         ]
       }
-    },
-    "/chora/geonode/v1/node/{id}": {
-      "get": {
-        "summary": "Node queries a node by the unique identifier of the node.",
-        "operationId": "Node",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/chora.geonode.v1.QueryNodeResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/grpc.gateway.runtime.Error"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "description": "id is the unique identifier of the node.",
-            "in": "path",
-            "required": true,
-            "type": "string",
-            "format": "uint64"
-          }
-        ],
-        "tags": [
-          "Query"
-        ]
-      }
     }
   },
   "definitions": {
-    "chora.geonode.v1.QueryNodeByCuratorResponse": {
-      "type": "object",
-      "properties": {
-        "curator": {
-          "type": "string",
-          "description": "curator is the address of the node curator."
-        },
-        "nodes": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/chora.geonode.v1.QueryNodeByCuratorResponse.Node"
-          },
-          "description": "node is the node managed by the curator."
-        },
-        "pagination": {
-          "$ref": "#/definitions/cosmos.base.query.v1beta1.PageResponse",
-          "description": "pagination is the pagination of the response."
-        }
-      },
-      "description": "QueryNodeByCuratorResponse is the Query/NodeByCurator response type."
-    },
-    "chora.geonode.v1.QueryNodeByCuratorResponse.Node": {
-      "type": "object",
-      "properties": {
-        "id": {
-          "type": "string",
-          "format": "uint64",
-          "description": "id is the unique identifier of the node."
-        },
-        "metadata": {
-          "type": "string",
-          "description": "metadata is the metadata of the node."
-        }
-      },
-      "description": "Node is the node properties."
-    },
     "chora.geonode.v1.QueryNodeResponse": {
       "type": "object",
       "properties": {
@@ -170,6 +197,78 @@
         }
       },
       "description": "QueryNodeResponse is the Query/Node response type."
+    },
+    "chora.geonode.v1.QueryNodesByCuratorResponse": {
+      "type": "object",
+      "properties": {
+        "curator": {
+          "type": "string",
+          "description": "curator is the address of the node curator."
+        },
+        "nodes": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/chora.geonode.v1.QueryNodesByCuratorResponse.Node"
+          },
+          "description": "nodes is the list of nodes managed by the curator."
+        },
+        "pagination": {
+          "$ref": "#/definitions/cosmos.base.query.v1beta1.PageResponse",
+          "description": "pagination is the pagination of the response."
+        }
+      },
+      "description": "QueryNodesByCuratorResponse is the Query/NodesByCurator response type."
+    },
+    "chora.geonode.v1.QueryNodesByCuratorResponse.Node": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "id is the unique identifier of the node."
+        },
+        "metadata": {
+          "type": "string",
+          "description": "metadata is the metadata of the node."
+        }
+      },
+      "description": "Node is the node properties."
+    },
+    "chora.geonode.v1.QueryNodesResponse": {
+      "type": "object",
+      "properties": {
+        "nodes": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/chora.geonode.v1.QueryNodesResponse.Node"
+          },
+          "description": "nodes is the list of nodes."
+        },
+        "pagination": {
+          "$ref": "#/definitions/cosmos.base.query.v1beta1.PageResponse",
+          "description": "pagination is the pagination of the response."
+        }
+      },
+      "description": "QueryNodesResponse is the Query/Nodes response type."
+    },
+    "chora.geonode.v1.QueryNodesResponse.Node": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "uint64",
+          "description": "id is the unique identifier of the node."
+        },
+        "curator": {
+          "type": "string",
+          "description": "curator is the address of the node curator."
+        },
+        "metadata": {
+          "type": "string",
+          "description": "metadata is the metadata of the node."
+        }
+      },
+      "description": "Node is the node properties."
     },
     "cosmos.base.query.v1beta1.PageRequest": {
       "type": "object",
